[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/BaseTooltip.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/GoldIncomeTooltip_BodyListSeparator.png" type="Texture" id=3]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/GoldIncomeTooltip_TopBorder.png" type="Texture" id=4]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/GoldIncomeTooltip_BottomBorder.png" type="Texture" id=5]
[ext_resource path="res://GameHUDRelated/StatsPanel/Assets/GoldIncomeTooltip_BodyBackground.png" type="Texture" id=6]
[ext_resource path="res://GameHUDRelated/StatsPanel/GoldIncomeTooltip.gd" type="Script" id=7]

[node name="GoldIncomeTooltip" instance=ExtResource( 1 )]
size_flags_horizontal = 6
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 99.0
margin_bottom = 40.0
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="TopBorder" type="TextureRect" parent="VBoxContainer" index="0"]
margin_right = 99.0
margin_bottom = 12.0
texture = ExtResource( 4 )

[node name="BodyContainer" type="MarginContainer" parent="VBoxContainer" index="1"]
margin_top = 12.0
margin_right = 99.0
margin_bottom = 24.0
size_flags_horizontal = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyBackground" type="TextureRect" parent="VBoxContainer/BodyContainer" index="0"]
margin_right = 99.0
margin_bottom = 12.0
texture = ExtResource( 6 )
stretch_mode = 2

[node name="ContentMarginer" type="MarginContainer" parent="VBoxContainer/BodyContainer" index="1"]
margin_right = 99.0
margin_bottom = 12.0
custom_constants/margin_right = 4
custom_constants/margin_top = 3
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BodyContainer/ContentMarginer" index="0"]
margin_left = 4.0
margin_top = 3.0
margin_right = 95.0
margin_bottom = 10.0
custom_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer" index="0"]
margin_right = 91.0
size_flags_horizontal = 3

[node name="IncomeNameDescs" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 2 )]
margin_right = 75.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.8
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="IncomeValuesDescs" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 2 )]
margin_left = 79.0
margin_right = 91.0
size_flags_horizontal = 11
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer" index="1"]
margin_left = 1.0
margin_top = 3.0
margin_right = 90.0
margin_bottom = 4.0
size_flags_horizontal = 6
texture = ExtResource( 3 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer" index="2"]
margin_top = 7.0
margin_right = 91.0
margin_bottom = 7.0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="TotalIncomeNameDescs" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer/HBoxContainer2" index="0" instance=ExtResource( 2 )]
margin_right = 75.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.8
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="TotalIncomeValueDescs" parent="VBoxContainer/BodyContainer/ContentMarginer/VBoxContainer/HBoxContainer2" index="1" instance=ExtResource( 2 )]
margin_left = 79.0
margin_right = 91.0
size_flags_horizontal = 11
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer" index="2"]
margin_top = 24.0
margin_right = 99.0
margin_bottom = 33.0
texture = ExtResource( 5 )
